Update on Fix-09

--- a/activities.html
+++ b/activities.html
@@ -30,7 +30,7 @@
         </header>
 
         <main>
-            <div class="about-header">
+            <div class="top-header">
                 <h2 class="about-title">활동 내용</h2>
                 <p class="about-subtitle">
                     다양한 스터디, 프로젝트, 봉사활동, 친목활동을 통해 함께
