--- a/activities_detail.html
+++ b/activities_detail.html
@@ -27,7 +27,7 @@
 </body>
 
 <main>
-        <div class="about-header detail-header">
+        <div class="top-header">
             <h5>세부사항</h5>
             <h2>웹 개발 스터디</h2>
             <h4>담당자: 김혜윤</h4>
