--- a/announcement.html
+++ b/announcement.html
@@ -30,7 +30,7 @@
         </header>
 
         <main>
-            <div class="about-header">
+            <div class="top-header">
                 <h2 class="about-title">공지사항</h2>
                 <p class="about-subtitle">
                     동아리의 최신 소식과 중요한 공지사항을 확인하세요.
