--- a/announcement_detail.html
+++ b/announcement_detail.html
@@ -30,7 +30,7 @@
         </header>
 
         <main>
-            <div class="about-header">
+            <div class="top-header">
                 <h2 class="about-title">모집 상세</h2>
                 <p class="about-subtitle">
                     선택한 모집 공고의 상세 정보를 확인하세요.
