--- a/apply.html
+++ b/apply.html
@@ -30,7 +30,7 @@
         </header>
 
         <main>
-            <div class="about-header">
+            <div class="top-header">
                 <h2 class="about-title">모집 안내</h2>
                 <p class="about-subtitle">
                     HY-CoRA 동아리에서 함께 성장할 새로운 멤버를 모집합니다.
