--- a/notice-detail.html
+++ b/notice-detail.html
@@ -30,7 +30,7 @@
         </header>
 
         <main>
-            <div class="about-header">
+            <div class="top-header">
                 <h2 class="about-title">공지 상세</h2>
                 <p class="about-subtitle">공지 세부사항을 확인하세요.</p>
             </div>
