--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
         <main>
             <!-- 상단 소개 배너 -->
-            <div class="about-header">
+            <div class="top-header">
                 <h2 class="about-title">HY-CoRA</h2>
                 <p class="about-subtitle">
                     HY-CoRA는 컴퓨터 기술을 공부하고 협업 프로젝트를 통해 함께
@@ -76,30 +76,44 @@
                             토론과 연구를 통해 사고의 폭을 넓히고 전문성을
                             심화시킵니다.
                         </p>
-                      
-                    <p class="quote-title">❝ 앞으로의 다짐 ❞</p>
-                    <p>앞으로도 HY-CoRA는 학문적 성취와 인적 네트워크의 성장을 함께 이루어 나가며, 모든 구성원이 서로에게 영감을 주는 지식 공동체로 발전해 나가겠습니다.</p>
-                    <!-- 소개 -->
-                    <h3 id="introduction">소개</h3>
-                    <div class="intro-cards">
-                        <div class="card">
-                            <div class="icon-container">
-                                <span class="icon"> 동아리 개요</span> 
+
+                        <p class="quote-title">❝ 앞으로의 다짐 ❞</p>
+                        <p>
+                            앞으로도 HY-CoRA는 학문적 성취와 인적 네트워크의
+                            성장을 함께 이루어 나가며, 모든 구성원이 서로에게
+                            영감을 주는 지식 공동체로 발전해 나가겠습니다.
+                        </p>
+                        <!-- 소개 -->
+                        <h3 id="introduction">소개</h3>
+                        <div class="intro-cards">
+                            <div class="card">
+                                <div class="icon-container">
+                                    <span class="icon"> 동아리 개요</span>
+                                </div>
+                                <p2
+                                    >Hy-CoRA는 컴퓨터 기술을 배우고 협업
+                                    프로젝트를 통해 함께 성장하는 한양대학교
+                                    ERICA의 학술 동아리입니다. <br />
+                                    다양한 전공의 학생들이 모여 실무 중심의
+                                    경험과 지식을 쌓고 있습니다.</p2
+                                >
                             </div>
-                            <p2>Hy-CoRA는 컴퓨터 기술을 배우고 협업 프로젝트를 통해 함께 성장하는 한양대학교 ERICA의 학술 동아리입니다. <br>
-                            다양한 전공의 학생들이 모여 실무 중심의 경험과 지식을 쌓고 있습니다.</p2>
-                        </div>
-                        <div class="card">
-                            <div class="icon-container">
-                                <span class="icon"> 활동 분야</span>
+                            <div class="card">
+                                <div class="icon-container">
+                                    <span class="icon"> 활동 분야</span>
+                                </div>
+                                <p2
+                                    >웹·앱 개발, 알고리즘, UI/UX 등 다양한
+                                    주제로 정기 스터디와 실습을 진행합니다.
+                                    <br />
+                                    학기 중에는 주간 세션, 방학에는 집중
+                                    프로젝트로 역량을 확장합니다.</p2
+                                >
                             </div>
-                            <p2>웹·앱 개발, 알고리즘, UI/UX 등 다양한 주제로 정기 스터디와 실습을 진행합니다. <br>
-                                학기 중에는 주간 세션, 방학에는 집중 프로젝트로 역량을 확장합니다.</p2>
-                        </div>
-                        <div class="card">
-                            <div class="icon-container">
-                                <span class="icon"> 운영진 </span>
-                              </div>
+                            <div class="card">
+                                <div class="icon-container">
+                                    <span class="icon"> 운영진 </span>
+                                </div>
                                 <p2
                                     >회장, 부회장, 교육·프로젝트·운영 파트
                                     리드로 구성되어 효율적인 활동을 지원합니다.
