Update on Design-18

--- a/about.html
+++ b/about.html
@@ -33,12 +33,15 @@
         <main>
             <!-- 상단 소개 배너 -->
             <div class="top-header">
-                <h2 class="about-title">HY-CoRA</h2>
-                <p class="about-subtitle">
-                    HY-CoRA는 컴퓨터 기술을 공부하고 협업 프로젝트를 통해 함께
-                    성장하는 <br />
-                    한양대학교 ERICA의 학술 동아리입니다.
-                </p>
+                <div class="top-title">
+                    <h2>HY-CoRA</h2>
+                </div>
+                <div class="top-subtitle">
+                    <p>
+                        HY-CoRA는 컴퓨터 기술을 공부하고 협업 프로젝트를 통해
+                        함께 성장하는 한양대학교 ERICA의 학술 동아리입니다.
+                    </p>
+                </div>
             </div>
             <!-- 본문 -->
             <section class="about-section">
