--- a/activities.html
+++ b/activities.html
@@ -30,12 +30,17 @@
         </header>
 
         <main>
+            <!-- 상단 소개 배너 -->
             <div class="top-header">
-                <h2 class="about-title">활동 내용</h2>
-                <p class="about-subtitle">
-                    다양한 스터디, 프로젝트, 봉사활동, 친목활동을 통해 함께
-                    성장하고 있습니다.
-                </p>
+                <div class="top-title">
+                    <h2>활동 내용</h2>
+                </div>
+                <div class="top-subtitle">
+                    <p>
+                        다양한 스터디, 프로젝트, 봉사활동, 친목활동을 통해 함께
+                        성장하고 있습니다.
+                    </p>
+                </div>
             </div>
 
             <section class="activities-section">
