--- a/announcement_detail.html
+++ b/announcement_detail.html
@@ -30,11 +30,14 @@
         </header>
 
         <main>
+            <!-- 상단 소개 배너 -->
             <div class="top-header">
-                <h2 class="about-title">모집 상세</h2>
-                <p class="about-subtitle">
-                    선택한 모집 공고의 상세 정보를 확인하세요.
-                </p>
+                <div class="top-title">
+                    <h2>모집 상세</h2>
+                </div>
+                <div class="top-subtitle">
+                    <p>선택한 모집 공고의 상세 정보를 확인하세요.</p>
+                </div>
             </div>
 
             <section class="notices-section">
