--- a/apply.html
+++ b/apply.html
@@ -30,11 +30,14 @@
         </header>
 
         <main>
+            <!-- 상단 소개 배너 -->
             <div class="top-header">
-                <h2 class="about-title">모집 안내</h2>
-                <p class="about-subtitle">
-                    HY-CoRA 동아리에서 함께 성장할 새로운 멤버를 모집합니다.
-                </p>
+                <div class="top-title">
+                    <h2>모집 안내</h2>
+                </div>
+                <div class="top-subtitle">
+                    <p>HY-CoRA에서 함께 성장할 새로운 맴버를 모집합니다.</p>
+                </div>
             </div>
             <section class="recruitment-section">
                 <div class="container">
