--- a/index.html
+++ b/index.html
@@ -1,166 +1,175 @@
 <!DOCTYPE html>
 <html lang="ko">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>HY-CoRA - 홈</title>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+        />
+        <link rel="stylesheet" href="style.css" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
+    </head>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HY-CoRA - 홈</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet" />
-</head>
-
-<body>
-    <header class="header">
-        <div class="container header-container">
-            <h1 class="logo"><a href="index.html">HY-CoRA</a></h1>
-            <nav class="nav">
-                <ul>
-                    <li><a href="about.html">소개</a></li>
-                    <li><a href="activities.html">활동 내용</a></li>
-                    <li><a href="apply.html">모집 안내/가입</a></li>
-                    <li><a href="announcement.html">공지사항</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <main>
-        <section class="intro-section">
-            <div class="intro-container">
-                <div class="intro-text">
-                    <h2>한양대학교 ERICA의 컴퓨터 연구 동아리 HY-CoRA</h2>
-                    <p>
-                        실력과 열정을 함께 키우는 하이코라에서,<br />당신의
-                        가능성을 펼쳐보세요.
-                    </p>
-                </div>
-                <div class="intro-image-placeholder"></div>
+    <body>
+        <header class="header">
+            <div class="container header-container">
+                <h1 class="logo"><a href="index.html">HY-CoRA</a></h1>
+                <nav class="nav">
+                    <ul>
+                        <li><a href="about.html">소개</a></li>
+                        <li><a href="activities.html">활동 내용</a></li>
+                        <li><a href="apply.html">모집 안내/가입</a></li>
+                        <li><a href="announcement.html">공지사항</a></li>
+                    </ul>
+                </nav>
             </div>
-        </section>
+        </header>
 
-        <section class="quoteidx-block">
-            <h2 class="quoteidx-title">
-                <span class="quoteidx-mark">“</span>
-                한양대학교 ERICA의 유일한 컴퓨터 연구 동아리, 하이코라
-                <span class="quoteidx-mark">”</span>
-            </h2>
-            <p class="quoteidx-desc">
-                하이코라는 개발 · 디자인 · 기획의 융합을 통해 함께 성장하는
-                것을 목표로 하는 컴퓨터 연구 동아리입니다.<br />
-                단순한 기술 습득에 그치지 않고, 아이디어를 현실로 구현하는
-                경험을 쌓으며<br />
-                학문과 실무의 간극을 좁혀 나가고 있습니다.
-            </p>
-        </section>
+        <main>
+            <section class="intro-section">
+                <div class="intro-container">
+                    <div class="intro-text">
+                        <h2>한양대학교 ERICA의 컴퓨터 연구 동아리 HY-CoRA</h2>
+                        <p>
+                            실력과 열정을 함께 키우는 하이코라에서,<br />당신의
+                            가능성을 펼쳐보세요.
+                        </p>
+                    </div>
+                    <div class="intro-image-placeholder"></div>
+                </div>
+            </section>
 
-        <div class="core-values">
-            <div class="shape circle">
-                <h3 class="core-title">융합과 협업</h3>
-                <p class="core-text">
-                    개발자, 디자이너가 모여 하나의 프로젝트를 완성하며
-                    팀워크와 문제 해결 능력을 자연스럽게 길러갑니다.
+            <section class="quoteidx-block">
+                <h2 class="quoteidx-title">
+                    <span class="quoteidx-mark">“</span>
+                    한양대학교 ERICA의 유일한 컴퓨터 연구 동아리, 하이코라
+                    <span class="quoteidx-mark">”</span>
+                </h2>
+                <p class="quoteidx-desc">
+                    하이코라는 개발 · 디자인 · 기획의 융합을 통해 함께 성장하는
+                    것을 목표로 하는 컴퓨터 연구 동아리입니다.<br />
+                    단순한 기술 습득에 그치지 않고, 아이디어를 현실로 구현하는
+                    경험을 쌓으며<br />
+                    학문과 실무의 간극을 좁혀 나가고 있습니다.
                 </p>
-            </div>
+            </section>
 
-            <div class="bottom-row">
-                <div class="shape trapezoid">
-                    <h3 class="core-title">도전과 성취</h3>
-                    <p class="core-text trapezoid-text">
-                        교내외 공모전 및 해커톤에 적극적으로 참여하며,
-                        실질적인 성과를 만들어내는 것을 목표로 합니다.
+            <div class="core-values">
+                <div class="shape circle">
+                    <h3 class="core-title">융합과 협업</h3>
+                    <p class="core-text">
+                        개발자, 디자이너가 모여 하나의 프로젝트를 완성하며
+                        팀워크와 문제 해결 능력을 자연스럽게 길러갑니다.
                     </p>
                 </div>
 
-                <div class="center-logo">HY-CORA</div>
+                <div class="bottom-row">
+                    <div class="shape trapezoid">
+                        <h3 class="core-title">도전과 성취</h3>
+                        <p class="core-text trapezoid-text">
+                            교내외 공모전 및 해커톤에 적극적으로 참여하며,
+                            실질적인 성과를 만들어내는 것을 목표로 합니다.
+                        </p>
+                    </div>
 
-                <div class="shape triangle">
-                    <h3 class="core-title own-title">자기 성장</h3>
-                    <p class="core-text triangle-text">
-                        컴퓨터 자격증<br />
-                        취득, 프로그래밍<br />
-                        스터디, 세미나 등 학습<br />
-                        문화를 바탕으로, 함께 배우고<br />
-                        성장할 수 있는 환경을<br />
-                        제공합니다.
+                    <div class="center-logo">HY-CORA</div>
+
+                    <div class="shape triangle">
+                        <h3 class="core-title own-title">자기 성장</h3>
+                        <p class="core-text triangle-text">
+                            컴퓨터 자격증<br />
+                            취득, 프로그래밍<br />
+                            스터디, 세미나 등 학습<br />
+                            문화를 바탕으로, 함께 배우고<br />
+                            성장할 수 있는 환경을<br />
+                            제공합니다.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <section class="past-events-section">
+                <div class="container">
+                    <h2 class="section-title">Past Events</h2>
+                    <div class="past-events-grid">
+                        <div class="event-card">
+                            <div class="event-image-placeholder">
+                                <img src="images/mentoring.jpg" />
+                            </div>
+                            <h4>Event 1. 멘토링</h4>
+                            <p>
+                                다양한 코딩 강좌를 통해 멘토의 수업을 듣고
+                                실력을 향상시킵니다.
+                            </p>
+                        </div>
+                        <div class="event-card">
+                            <div class="event-image-placeholder">
+                                <img src="images/field_trip.jpg" />
+                            </div>
+                            <h4>Event 2. 회사(exam) 견학</h4>
+                            <p>
+                                다양한 부서를 둘러보며 회사의 업무환경과 문화를
+                                직접 체험합니다.
+                            </p>
+                        </div>
+                        <div class="event-card">
+                            <div class="event-image-placeholder">
+                                <img src="images/mt.jpg" />
+                            </div>
+                            <h4>Event 3. 엠티(MT)</h4>
+                            <p>
+                                팀워크를 다지고 친목을 쌓는 단체활동 시간입니다.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+
+        <footer class="footer">
+            <div class="container footer-content">
+                <!-- Top: Copyright -->
+                <div class="footer-top">
+                    <p>Copyright 2025. HY-CoRA All rights reserved.</p>
+                    <a
+                        href="https://www.instagram.com/hycora_hanyang/"
+                        target="_blank"
+                        rel="noopener"
+                        class="social-icon"
+                    >
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
+
+                <!-- Divider -->
+                <div class="footer-divider" aria-hidden="true"></div>
+
+                <!-- Bottom: 좌측 주소/메일 / 우측 회장·부회장 -->
+                <div class="footer-bottom">
+                    <p class="footer-detail">
+                        <strong>Made by HY-CoRA</strong> <br />
+                        2025 ver. Create by <strong> 팀</strong> 이한, 최관우,
+                        김현준, 김혜윤, 박아진, 박강호, 최지민 <br /><br />
+                        경기도 안산시 상록구 한양대학로 55 복지관 425호<br />
+                        hycora369@gmail.com
                     </p>
-                </div>
-            </div>
-        </div>
-
-        <section class="past-events-section">
-            <div class="container">
-                <h2 class="section-title">Past Events</h2>
-                <div class="past-events-grid">
-                    <div class="event-card">
-                        <div class="event-image-placeholder">
-                            <img src="images/mentoring.jpg">
+                    <div class="contacts">
+                        <div class="contact-block">
+                            <h3>회장</h3>
+                            <p>이한 010-3552-2044</p>
                         </div>
-                        <h4>Event 1. 멘토링</h4>
-                        <p>
-                            다양한 코딩 강좌를 통해 멘토의 수업을 듣고
-                            실력을 향상시킵니다.
-                        </p>
-                    </div>
-                    <div class="event-card">
-                        <div class="event-image-placeholder">
-                            <img src="images/field_trip.jpg">
+                        <div class="contact-block">
+                            <h3>부회장</h3>
+                            <p>최관우 010-3410-4697</p>
                         </div>
-                        <h4>Event 2. 회사(exam) 견학</h4>
-                        <p>
-                            다양한 부서를 둘러보며 회사의 업무환경과 문화를
-                            직접 체험합니다.
-                        </p>
-                    </div>
-                    <div class="event-card">
-                        <div class="event-image-placeholder">
-                            <img src="images/mt.jpg">
-                        </div>
-                        <h4>Event 3. 엠티(MT)</h4>
-                        <p>
-                            팀워크를 다지고 친목을 쌓는 단체활동 시간입니다.
-                        </p>
                     </div>
                 </div>
             </div>
-        </section>
-    </main>
-
-    <footer class="footer">
-        <div class="container footer-content">
-            <!-- Top: Copyright -->
-            <div class="footer-top">
-                <p>Copyright 2025. HY-CoRA All rights reserved.</p>
-                <a href="https://www.instagram.com/hycora_hanyang/" target="_blank" rel="noopener" class="social-icon">
-                    <i class="fab fa-instagram"></i>
-                </a>
-            </div>
-
-            <!-- Divider -->
-            <div class="footer-divider" aria-hidden="true"></div>
-
-            <!-- Bottom: 좌측 주소/메일 / 우측 회장·부회장 -->
-            <div class="footer-bottom">
-                <p class="footer-detail">
-                    <strong>Made by HY-CoRA</strong> <br />
-                    2025 ver. Create by <strong> 팀</strong> 이한, 최관우,
-                    김현준, 김혜윤, 박아진, 박강호, 최지민 <br /><br />
-                    경기도 안산시 상록구 한양대학로 55 복지관 425호<br />
-                    hycora369@gmail.com
-                </p>
-                <div class="contacts">
-                    <div class="contact-block">
-                        <h3>회장</h3>
-                        <p>이한 010-3552-2044</p>
-                    </div>
-                    <div class="contact-block">
-                        <h3>부회장</h3>
-                        <p>최관우 010-3410-4697</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-</body>
-
+        </footer>
+    </body>
 </html>
