--- a/announcement.html
+++ b/announcement.html
@@ -30,11 +30,14 @@
         </header>
 
         <main>
+            <!-- 상단 소개 배너 -->
             <div class="top-header">
-                <h2 class="about-title">공지사항</h2>
-                <p class="about-subtitle">
-                    동아리의 최신 소식과 중요한 공지사항을 확인하세요.
-                </p>
+                <div class="top-title">
+                    <h2>공지사항</h2>
+                </div>
+                <div class="top-subtitle">
+                    <p>동아리의 최신 소식과 중요한 공지사항을 확인하세요.</p>
+                </div>
             </div>
 
             <section class="notices-section">
