--- a/notice-detail.html
+++ b/notice-detail.html
@@ -30,9 +30,14 @@
         </header>
 
         <main>
+            <!-- 상단 소개 배너 -->
             <div class="top-header">
-                <h2 class="about-title">공지 상세</h2>
-                <p class="about-subtitle">공지 세부사항을 확인하세요.</p>
+                <div class="top-title">
+                    <h2>공지 상세</h2>
+                </div>
+                <div class="top-subtitle">
+                    <p>공지 세부사항을 확인하세요.</p>
+                </div>
             </div>
 
             <section class="notices-section">
