--- a/activities.html
+++ b/activities.html
@@ -46,14 +46,17 @@
             <section class="activities-section">
                 <div class="container">
                     <div class="activities-nav">
-                        <button class="nav-button active">전체활동</button>
-                        <button class="nav-button">스터디</button>
-                        <button class="nav-button">친목활동</button>
+                        <button class="nav-button active">전체</button>
+                        <button class="nav-button">모집중</button>
+                        <button class="nav-button">진행중</button>
+                        <button class="nav-button">예정</button>
+                        <button class="nav-button">완료</button>
                     </div>
 
                     <div class="activities-container">
                         <!-- JS가 activity-card들을 자동으로 채워 넣음 -->
                     </div>
+                    <div id="pagination" class="pagination"></div>
                 </div>
             </section>
         </main>
@@ -99,7 +102,7 @@
             </div>
         </footer>
 
-        <script src="js/activies.js"></script>
+        <script src="js/activities.js"></script>
         <script src="js/nav.js"></script>
     </body>
 </html>
