--- a/apply.html
+++ b/apply.html
@@ -33,7 +33,7 @@
             <!-- 상단 소개 배너 -->
             <div class="top-header">
                 <div class="top-title">
-                    <h2>모집안내</h2>
+                    <h3>모집안내</h3>
                 </div>
                 <div class="top-subtitle">
                     <p>HY-CoRA에서 함께 성장할 새로운 맴버를 모집합니다.</p>
@@ -61,7 +61,7 @@
                             문의
                         </button>
                     </div>
-                    <h2 id="Schedule">모집 일정</h2>
+                    <h3 id="Schedule">모집 일정</h3>
                     <div class="recruitment-content">
                         <div class="recruitment-card">
                             <div class="recruitment-line"></div>
@@ -84,14 +84,14 @@
                     <div class="outer-card">
                         <div class="card-label">지원 방법</div>
                         <div class="inner-card">
-                            <h2>제출 & 확인</h2>
+                            <h4>제출 & 확인</h4>
                             <p>지원 기간에 꼭 제출 -> 안내 메일/문자 확인</p>
                         </div>
                     </div>
                     <div class="outer-card">
                         <div class="card-label">바로 가기</div>
                         <div class="inner-card">
-                            <h2>지원 자격 / FAQ / 문의</h2>
+                            <h4>지원 자격 / FAQ / 문의</h4>
                             <p>
                                 <b>지원자격</b> · <b>FAQ</b> ·
                                 <b>문의</b> 페이지에서 자세히 확인하세요.
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                 </div>
-                <h2 id="Eligibility">지원자격</h2>
+                <h3 id="Eligibility">지원자격</h3>
 
                 <div class="apply-card">
                     <p>
@@ -108,19 +108,19 @@
                     </p>
                 </div>
 
-                <div><h2>기본 요건</h2></div>
+                <div><h3>기본 요건</h3></div>
                 <div class="two-cards two-cards-1">
                     <div class="outer-card">
                         <div class="card-label card-label-1">의지</div>
                         <div class="inner-card">
-                            <h2>학습 의지</h2>
+                            <h4>학습 의지</h4>
                             <p>기초부터 차근히 배우고 팀으로 협업할 마음</p>
                         </div>
                     </div>
                     <div class="outer-card">
                         <div class="card-label card-label-1">참여</div>
                         <div class="inner-card">
-                            <h2>스터디 참여</h2>
+                            <h4>스터디 참여</h4>
                             <p>
                                 개인 일정에 맞춰 참여 가능한 트랙을 자유롭게
                                 선택 신청하세요.
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                 </div>
-                <h2 id="Process">지원 절차</h2>
+                <h3 id="Process">지원 절차</h3>
 
                 <div class="container">
                     <div class="apply-box">
@@ -136,7 +136,7 @@
                             <div class="apply-circle"><h2>1</h2></div>
                             <div class="apply-order">
                                 <div class="apply-text">
-                                    <h2>지원서 제출</h2>
+                                    <h3>지원서 제출</h3>
                                     <p>모집 기간에 폼 제출</p>
                                 </div>
                                 <button class="apply-button">
@@ -148,7 +148,7 @@
                             <div class="apply-circle"><h2>2</h2></div>
                             <div class="apply-order">
                                 <div class="apply-text">
-                                    <h2>지원서 제출</h2>
+                                    <h3>지원서 제출</h3>
                                     <p>모집 기간에 폼 제출</p>
                                 </div>
                             </div>
@@ -160,7 +160,7 @@
                     <div class="outer-card">
                         <div class="card-label">바로가기</div>
                         <div class="inner-card">
-                            <h2>모집 일정 확인</h2>
+                            <h4>모집 일정 확인</h4>
                             <p>
                                 <b>모집 일정</b>에서 학기별 타임라인을
                                 확인하세요.
@@ -170,14 +170,14 @@
                     <div class="outer-card">
                         <div class="card-label">문의</div>
                         <div class="inner-card">
-                            <h2>질문이 있다면</h2>
+                            <h4>질문이 있다면</h4>
                             <p><b>문의</b>로 연락주세요.</p>
                         </div>
                     </div>
                 </div>
 
-                <h2 id="faq">FAQ</h2>
-                <div class="FAQ-box">
+                <h3 id="faq">FAQ</h3>
+                <div class="learning-wrap">
                     <div class="FAQ-card">
                         <b>▼ 전공/학년 제한이 있나요?</b>
                         <p>
@@ -207,19 +207,19 @@
                         </p>
                     </div>
                 </div>
-                <h2 id="contact">문의</h2>
+                <h3 id="contact">문의</h3>
                 <div class="two-cards">
                     <div class="outer-card">
                         <div class="card-label">이메일</div>
                         <div class="inner-card">
-                            <h2>공식 메일</h2>
+                            <h4>공식 메일</h4>
                             <p>hycora369@gmail.com</p>
                         </div>
                     </div>
                     <div class="outer-card">
                         <div class="card-label">연락처</div>
                         <div class="inner-card">
-                            <h2>전화번호</h2>
+                            <h4>전화번호</h4>
                             <p>
                                 회장 이 한: 010-3552-2044 <br />부회장 최관우:
                                 010-3410-4697
@@ -227,11 +227,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="two-cards">
+                <div class="two-cards two-cards-1">
                     <div class="outer-card">
                         <div class="card-label">방문</div>
                         <div class="inner-card">
-                            <h2>오프라인</h2>
+                            <h4>오프라인</h4>
                             <p>
                                 경기도 안산시 상록구 한양대학로 55 복지관 425호
                             </p>
@@ -240,7 +240,7 @@
                     <div class="outer-card">
                         <div class="card-label">가이드</div>
                         <div class="inner-card">
-                            <h2>답변을 빨리 받는 팁</h2>
+                            <h4>답변을 빨리 받는 팁</h4>
                             <p>
                                 재촉은 삼가고, 알고 싶은 핵심과 원하시는 답을 한
                                 문장으로 간단히 남겨 주시면 더 빠르게 답변드릴
