Update on Fix-10

--- a/announcement_detail.html
+++ b/announcement_detail.html
@@ -30,21 +30,7 @@
         </header>
 
         <main>
-            <!-- 상단 소개 배너 -->
-            <div class="top-header">
-                <div class="top-title">
-                    <h2>모집상세</h2>
-                </div>
-                <div class="top-subtitle">
-                    <p>선택한 모집 공고의 상세 정보를 확인하세요.</p>
-                </div>
-            </div>
-
-            <section class="notices-section">
-                <div class="container">
-                    <!-- JS가 recruit-card를 주입합니다 -->
-                </div>
-            </section>
+            <!-- JS가 내용 주입 -->
         </main>
 
         <footer class="footer">
